Fix mobile resolution - currently there is a big gap between the map and the results of the search

--- a/src/public-booking/stylesheets/_map.scss
+++ b/src/public-booking/stylesheets/_map.scss
@@ -58,16 +58,16 @@
 }
 
 .gmnoprint img {
-  max-width: none; 
+  max-width: none;
   max-height: none;
 }
 
-.gm-style img { 
-  max-width: none; 
+.gm-style img {
+  max-width: none;
 }
-.gm-style label { 
-  width: auto; 
-  display: inline; 
+.gm-style label {
+  width: auto;
+  display: inline;
 }
 
 /* GMAP END */
@@ -87,7 +87,9 @@
   }
 
   .bb-map-block {
-    height: 800px;
+    @media (min-width: 780px) {
+      height: 800px;
+    }
   }
 
 }
